# Discord-Notion-Sync

./: .env.example  README.md  bot.py  main.py  notion.py  pyproject.toml  tavily_tool.py
